--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,26 @@
     <groupId>com.leaf</groupId>
     <artifactId>database-learn</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>mybatis-learn</module>
+        <module>mybatis-plus-learn</module>
+    </modules>
+
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 </project>
